XXXX-YY-ZZ Alexander Necheff <alex@necheff.net>
    * Set version to 1.3.0.
    * Set ABI to 0.1.0.
    * Automated test suite.

2023-05-27 Alexander Necheff <alex@necheff.net>
    * Set version to 1.2.2.
    * Corrected issue where /opt/catloaf/include may not have the correct permissions
        set on install with Debian package.

2023-05-27 Alexander Necheff <alex@necheff.net>
    * Set version to 1.2.1.
    * Added target to build Debian package.

2021-11-14 Alexander Necheff <alex@necheff.net>
    * Set version to 1.2.0, using semantic versioning.
    * Prior versions had no ChangeLog, this is the first.