@@ -1,7 +1,9 @@
 XXXX-YY-ZZ Alexander Necheff <alex@necheff.net>
     * Set version to 1.3.0.
     * Set ABI to 0.1.0.
-    * Automated test suite.
+    * Corrected issue preventing linkage against Debian package generated by build system. (issue #9)
+    * Corrected NULL pointer dereference when calling pgfree() on a page holding the maximum block size. (issue #15)
+    * Automated test suite. (issue #13)
 
 2023-05-27 Alexander Necheff <alex@necheff.net>
     * Set version to 1.2.2.
